distParser.py
# Generated from dist.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


	



class distParser ( Parser ):

    grammarFileName = "dist.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'||'", "'&&'", "'<'", "'>'", "'!='", 
                     "'<='", "'>='", "'=='", "'+'", "'-'", "'*'", "'/'", 
                     "'('", "')'", "','", "':'", "'['", "']'", "'{'", "'}'", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CTE_F", "CTE_I", 
                      "CTE_C", "CTE_B", "CTE_STRING", "NULL", "INT", "FLOAT", 
                      "CHAR", "BOOL", "VOID", "PRINT", "IF", "ELSE", "WHILE", 
                      "PROGRAM", "VAR", "MAIN", "RETURN", "READ", "FUN", 
                      "SIZE", "POW", "SQRT", "MOMENT", "PROB", "VARIANCE", 
                      "MODE", "MEDIAN", "PLOT_HISTOGRAM", "EXP_BERNOULLI", 
                      "VAR_BERNOULLI", "PROB_BINOMIAL", "EXP_BINOMIAL", 
                      "VAR_BINOMIAL", "PROB_GEOMETRIC", "EXP_GEOMETRIC", 
                      "VAR_GEOMETRIC", "ID", "NEWLINE", "WHITESPACE" ]

    RULE_dist = 0
    RULE_programa = 1
    RULE_expresion = 2
    RULE_exp_and = 3
    RULE_exp_comp = 4
    RULE_exp = 5
    RULE_termino = 6
    RULE_factor = 7
    RULE_var_cte = 8
    RULE_cte = 9
    RULE_lectura = 10
    RULE_escritura = 11
    RULE_tipo = 12
    RULE_tipo_funcion = 13
    RULE_varss = 14
    RULE_returnn = 15
    RULE_un_parametro = 16
    RULE_dos_parametros = 17
    RULE_tres_parametros = 18
    RULE_llamada_funcion_especial = 19
    RULE_llamada_funcion = 20
    RULE_funcion = 21
    RULE_vars_arreglo = 22
    RULE_mult_cte = 23
    RULE_dimension_uno = 24
    RULE_dimension_dos = 25
    RULE_posicion_arreglo = 26
    RULE_estatuto = 27
    RULE_bloque_condicional = 28
    RULE_bloque_local = 29
    RULE_asignacion = 30
    RULE_condicion = 31
    RULE_while_cycle = 32

    ruleNames =  [ "dist", "programa", "expresion", "exp_and", "exp_comp", 
                   "exp", "termino", "factor", "var_cte", "cte", "lectura", 
                   "escritura", "tipo", "tipo_funcion", "varss", "returnn", 
                   "un_parametro", "dos_parametros", "tres_parametros", 
                   "llamada_funcion_especial", "llamada_funcion", "funcion", 
                   "vars_arreglo", "mult_cte", "dimension_uno", "dimension_dos", 
                   "posicion_arreglo", "estatuto", "bloque_condicional", 
                   "bloque_local", "asignacion", "condicion", "while_cycle" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    CTE_F=23
    CTE_I=24
    CTE_C=25
    CTE_B=26
    CTE_STRING=27
    NULL=28
    INT=29
    FLOAT=30
    CHAR=31
    BOOL=32
    VOID=33
    PRINT=34
    IF=35
    ELSE=36
    WHILE=37
    PROGRAM=38
    VAR=39
    MAIN=40
    RETURN=41
    READ=42
    FUN=43
    SIZE=44
    POW=45
    SQRT=46
    MOMENT=47
    PROB=48
    VARIANCE=49
    MODE=50
    MEDIAN=51
    PLOT_HISTOGRAM=52
    EXP_BERNOULLI=53
    VAR_BERNOULLI=54
    PROB_BINOMIAL=55
    EXP_BINOMIAL=56
    VAR_BINOMIAL=57
    PROB_GEOMETRIC=58
    EXP_GEOMETRIC=59
    VAR_GEOMETRIC=60
    ID=61
    NEWLINE=62
    WHITESPACE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(distParser.ProgramaContext,0)


        def EOF(self):
            return self.getToken(distParser.EOF, 0)

        def getRuleIndex(self):
            return distParser.RULE_dist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDist" ):
                listener.enterDist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDist" ):
                listener.exitDist(self)




    def dist(self):

        localctx = distParser.DistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.programa()
            self.state = 67
            self.match(distParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(distParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(distParser.ID, 0)

        def MAIN(self):
            return self.getToken(distParser.MAIN, 0)

        def bloque_local(self):
            return self.getTypedRuleContext(distParser.Bloque_localContext,0)


        def funcion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.FuncionContext)
            else:
                return self.getTypedRuleContext(distParser.FuncionContext,i)


        def varss(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.VarssContext)
            else:
                return self.getTypedRuleContext(distParser.VarssContext,i)


        def vars_arreglo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.Vars_arregloContext)
            else:
                return self.getTypedRuleContext(distParser.Vars_arregloContext,i)


        def getRuleIndex(self):
            return distParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = distParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(distParser.PROGRAM)
            self.state = 70
            self.match(distParser.ID)
            self.state = 71
            self.match(distParser.T__0)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==distParser.VAR:
                self.state = 74
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 72
                    self.varss()
                    pass

                elif la_ == 2:
                    self.state = 73
                    self.vars_arreglo()
                    pass


                self.state = 76
                self.match(distParser.T__0)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==distParser.FUN:
                self.state = 83
                self.funcion()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(distParser.MAIN)
            self.state = 90
            self.bloque_local()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpresionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_and(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.Exp_andContext)
            else:
                return self.getTypedRuleContext(distParser.Exp_andContext,i)


        def getRuleIndex(self):
            return distParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = distParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expresion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.exp_and()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==distParser.T__1:
                self.state = 93
                self.match(distParser.T__1)
                self.state = 94
                self.exp_and()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp_andContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_comp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.Exp_compContext)
            else:
                return self.getTypedRuleContext(distParser.Exp_compContext,i)


        def getRuleIndex(self):
            return distParser.RULE_exp_and

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_and" ):
                listener.enterExp_and(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_and" ):
                listener.exitExp_and(self)




    def exp_and(self):

        localctx = distParser.Exp_andContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exp_and)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.exp_comp()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==distParser.T__2:
                self.state = 101
                self.match(distParser.T__2)
                self.state = 102
                self.exp_comp()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp_compContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.ExpContext)
            else:
                return self.getTypedRuleContext(distParser.ExpContext,i)


        def getRuleIndex(self):
            return distParser.RULE_exp_comp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_comp" ):
                listener.enterExp_comp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_comp" ):
                listener.exitExp_comp(self)




    def exp_comp(self):

        localctx = distParser.Exp_compContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exp_comp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.exp()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << distParser.T__3) | (1 << distParser.T__4) | (1 << distParser.T__5) | (1 << distParser.T__6) | (1 << distParser.T__7) | (1 << distParser.T__8))) != 0):
                self.state = 109
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << distParser.T__3) | (1 << distParser.T__4) | (1 << distParser.T__5) | (1 << distParser.T__6) | (1 << distParser.T__7) | (1 << distParser.T__8))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 110
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.TerminoContext)
            else:
                return self.getTypedRuleContext(distParser.TerminoContext,i)


        def getRuleIndex(self):
            return distParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = distParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.termino()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==distParser.T__9 or _la==distParser.T__10:
                self.state = 114
                _la = self._input.LA(1)
                if not(_la==distParser.T__9 or _la==distParser.T__10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self.termino()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerminoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.FactorContext)
            else:
                return self.getTypedRuleContext(distParser.FactorContext,i)


        def getRuleIndex(self):
            return distParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)




    def termino(self):

        localctx = distParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_termino)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.factor()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==distParser.T__11 or _la==distParser.T__12:
                self.state = 122
                _la = self._input.LA(1)
                if not(_la==distParser.T__11 or _la==distParser.T__12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 123
                self.factor()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._var_cte = None # Var_cteContext

        def expresion(self):
            return self.getTypedRuleContext(distParser.ExpresionContext,0)


        def var_cte(self):
            return self.getTypedRuleContext(distParser.Var_cteContext,0)


        def getRuleIndex(self):
            return distParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = distParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [distParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(distParser.T__13)
                self.state = 130
                self.expresion()
                self.state = 131
                self.match(distParser.T__14)
                pass
            elif token in [distParser.T__9, distParser.T__10, distParser.CTE_F, distParser.CTE_I, distParser.CTE_C, distParser.CTE_B, distParser.NULL, distParser.SIZE, distParser.POW, distParser.SQRT, distParser.MOMENT, distParser.PROB, distParser.VARIANCE, distParser.MODE, distParser.MEDIAN, distParser.PLOT_HISTOGRAM, distParser.EXP_BERNOULLI, distParser.VAR_BERNOULLI, distParser.PROB_BINOMIAL, distParser.EXP_BINOMIAL, distParser.VAR_BINOMIAL, distParser.PROB_GEOMETRIC, distParser.EXP_GEOMETRIC, distParser.VAR_GEOMETRIC, distParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==distParser.T__9 or _la==distParser.T__10:
                    self.state = 133
                    _la = self._input.LA(1)
                    if not(_la==distParser.T__9 or _la==distParser.T__10):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 136
                localctx._var_cte = self.var_cte()
                print((None if localctx._var_cte is None else self._input.getText((localctx._var_cte.start,localctx._var_cte.stop))))
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_cteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cte(self):
            return self.getTypedRuleContext(distParser.CteContext,0)


        def ID(self):
            return self.getToken(distParser.ID, 0)

        def llamada_funcion(self):
            return self.getTypedRuleContext(distParser.Llamada_funcionContext,0)


        def posicion_arreglo(self):
            return self.getTypedRuleContext(distParser.Posicion_arregloContext,0)


        def llamada_funcion_especial(self):
            return self.getTypedRuleContext(distParser.Llamada_funcion_especialContext,0)


        def getRuleIndex(self):
            return distParser.RULE_var_cte

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_cte" ):
                listener.enterVar_cte(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_cte" ):
                listener.exitVar_cte(self)




    def var_cte(self):

        localctx = distParser.Var_cteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_cte)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.cte()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(distParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.llamada_funcion()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.posicion_arreglo()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 145
                self.llamada_funcion_especial()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CTE_I(self):
            return self.getToken(distParser.CTE_I, 0)

        def CTE_F(self):
            return self.getToken(distParser.CTE_F, 0)

        def CTE_C(self):
            return self.getToken(distParser.CTE_C, 0)

        def CTE_B(self):
            return self.getToken(distParser.CTE_B, 0)

        def NULL(self):
            return self.getToken(distParser.NULL, 0)

        def getRuleIndex(self):
            return distParser.RULE_cte

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCte" ):
                listener.enterCte(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCte" ):
                listener.exitCte(self)




    def cte(self):

        localctx = distParser.CteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cte)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << distParser.CTE_F) | (1 << distParser.CTE_I) | (1 << distParser.CTE_C) | (1 << distParser.CTE_B) | (1 << distParser.NULL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LecturaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(distParser.READ, 0)

        def ID(self):
            return self.getToken(distParser.ID, 0)

        def posicion_arreglo(self):
            return self.getTypedRuleContext(distParser.Posicion_arregloContext,0)


        def getRuleIndex(self):
            return distParser.RULE_lectura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLectura" ):
                listener.enterLectura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLectura" ):
                listener.exitLectura(self)




    def lectura(self):

        localctx = distParser.LecturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_lectura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(distParser.READ)
            self.state = 151
            self.match(distParser.T__13)
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 152
                self.match(distParser.ID)
                pass

            elif la_ == 2:
                self.state = 153
                self.posicion_arreglo()
                pass


            self.state = 156
            self.match(distParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EscrituraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(distParser.PRINT, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(distParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(distParser.ExpresionContext,i)

